--- a/plugins/org.eclipse.datatools.connectivity.db.generic/src/org/eclipse/datatools/connectivity/db/generic/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.db.generic/src/org/eclipse/datatools/connectivity/db/generic/resources.properties
@@ -6,6 +6,7 @@ NewConnectionProfileWizard.error.msg = An exception occurred while creating a ne
 GenericDBProfileDetailsWizardPage.title = Specify a Driver and Connection Details
 GenericDBProfileDetailsWizardPage.msg = Select a driver from the drop-down and provide login details for the connection.
 GenericDBProfileDetailsWizardPage.driverCombo.label = Select a driver from the drop-down:
+GenericDBProfileDetailsWizardPage.databaseName.label = Database:
 GenericDBProfileDetailsWizardPage.url.label = URL:
 GenericDBProfileDetailsWizardPage.PingButton=Test connection
 GenericDBProfileDetailsWizardPage.userName.label = User name:
