--- a/plugins/org.eclipse.datatools.modelbase.sql.query/plugin.properties
+++ b/plugins/org.eclipse.datatools.modelbase.sql.query/plugin.properties
@@ -1,16 +1,8 @@
 # NLS_MESSAGEFORMAT_VAR          needed to handle quotes correctly
 # ====================================================================
-# Licensed Materials - Property of IBM
-# com.ibm.db.models.sql.query.edit
-# (C) Copyright IBM Corporation 2005. All Rights Reserved.
-#
-# Note to U.S. Government Users Restricted Rights:
-#   Use, duplication or disclosure restricted 
-#   by GSA ADP Schedule Contract with IBM Corp.
-# ====================================================================
 
 # ====================================================================
-# $Id: plugin.properties,v 1.5 2005/06/29 22:56:12 sschaer Exp $
+# $Id: plugin.properties,v 1.1 2005/12/16 13:11:15 bpayton Exp $
 # @generated NOT
 # ====================================================================
 
@@ -27,6 +19,6 @@
 # ====================================================================
 
 pluginName = SQL Query Model Plugin
-nl1PluginName 	= SQL Query Model Nl1 Fragment
+nl1PluginName = SQL Query Model Nl1 Fragment
 providerName = IBM
 
