--- a/plugins/org.eclipse.datatools.sqltools.sql/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sql/build.properties
@@ -1,4 +1,6 @@
-source.. = src/
-output.. = bin/
+source.sqltools.jar = src/
+output.sqltools.jar = bin/
 bin.includes = META-INF/,\
-               .
+               sqltools.jar,\
+               icons/,\
+               about.html
