[121910] Add about.hmtl, update manifest and build.properties for M2

--- a/plugins/org.eclipse.datatools.sqltools.result/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.result/build.properties
@@ -2,7 +2,11 @@ source.sqlresult.jar = src/
 output.sqlresult.jar = bin/
 bin.includes = META-INF/,\
                sqlresult.jar,\
-               src/
+               src/,\
+               about.html,\
+               icons/,\
+               plugin.properties,\
+               plugin.xml
                
 jars.extra.classpath =
 src.dir =		src/
