[121910] Add about.hmtl, update manifest and build.properties for M2

--- a/plugins/org.eclipse.datatools.sqltools.editor.core/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.editor.core/build.properties
@@ -4,7 +4,8 @@ bin.includes = META-INF/,\
                sqleditorframe.jar,\
                plugin.xml,\
                .settings/,\
-               schema/
+               schema/,\
+               about.html
 
 jars.extra.classpath =
 src.dir =		src/
