--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/build.properties
@@ -5,3 +5,11 @@ bin.includes = sqleditor.jar,\
                schema/,\
                plugin.xml,\
                about.html
+               
+jars.extra.classpath =
+src.dir =		src/
+plugin.version =	0.7.0
+javadoc.dir =		doc/api/
+download.dir =		./download/
+javac.source =		1.4
+javac.target =		1.4
