--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/plugin.xml
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/plugin.xml
@@ -2,9 +2,9 @@
 <?eclipse version="3.0"?>
 <plugin
    id="org.eclipse.datatools.sqltools.sqleditor"
-   name="%pluginName"
+   name="Eclipse Data Tools Platform SQL Editor"
    version="0.7.0"
-   provider-name="%providerName"
+   provider-name="eclipse.org"
    class="org.eclipse.datatools.sqltools.sqleditor.SQLEditorPlugin">
 
    <extension-point id="texthover" name="SQL Editor Text Hover" schema="schema/texthover.exsd"/>
