[121910] Add about.hmtl, update manifest and build.properties for M2

--- a/plugins/org.eclipse.datatools.sqltools.debugger.core/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.debugger.core/build.properties
@@ -1,4 +1,5 @@
-source.. = src/
-output.. = bin/
+source.sqldebugcore.jar = src/
+output.sqldebugcore.jar = bin/
 bin.includes = META-INF/,\
-               .
+               sqldebugcore.jar,\
+               about.html
