--- a/plugins/org.eclipse.datatools.sqltools.debugger.core/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.debugger.core/build.properties
@@ -3,3 +3,11 @@ output.sqldebugcore.jar = bin/
 bin.includes = META-INF/,\
                sqldebugcore.jar,\
                about.html
+
+jars.extra.classpath =
+src.dir =		src/
+plugin.version =	0.7.0
+javadoc.dir =		doc/api/
+download.dir =		./download/
+javac.source =		1.4
+javac.target =		1.4
