[121910] Add about.hmtl, update manifest and build.properties for M2

--- a/plugins/org.eclipse.datatools.connectivity.db.generic/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.db.generic/build.properties
@@ -1,7 +1,8 @@
 bin.includes = META-INF/,\
                plugin.xml,\
                genericdb.jar,\
-               icons/
+               icons/,\
+               about.html
 jars.compile.order = genericdb.jar
 source.genericdb.jar = src/
 output.genericdb.jar = bin/
