--- a/plugins/org.eclipse.datatools.connectivity.ui.dse/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui.dse/build.properties
@@ -2,7 +2,8 @@ bin.includes = META-INF/,\
                plugin.xml,\
                dse.jar,\
                icons/,\
-               plugin.properties
+               plugin.properties,\
+               about.html
 jars.compile.order = dse.jar
 source.dse.jar = src/
 output.dse.jar = bin/
