[121910] Add about.hmtl, update manifest and build.properties for M2

--- a/plugins/org.eclipse.datatools.modelbase.sql.query/build.properties
+++ b/plugins/org.eclipse.datatools.modelbase.sql.query/build.properties
@@ -3,4 +3,5 @@ output.sqlquerymodel.jar = bin/
 bin.includes = plugin.xml,\
                sqlquerymodel.jar,\
                plugin.properties,\
-               META-INF/
+               META-INF/,\
+               about.html
