--- a/plugins/org.eclipse.datatools.modelbase.sql.xml.query/build.properties
+++ b/plugins/org.eclipse.datatools.modelbase.sql.xml.query/build.properties
@@ -3,4 +3,5 @@ output.sqlxmlquerymodel.jar = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                sqlxmlquerymodel.jar,\
-               META-INF/
+               META-INF/,\
+               about.html
