[121910] Add about.hmtl, update manifest and build.properties for M2

--- a/plugins/org.eclipse.datatools.sqltools.parsers.sql.lexer/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.parsers.sql.lexer/build.properties
@@ -4,7 +4,8 @@ bin.includes = plugin.xml,\
                lexer.jar,\
                thirdparty/,\
                META-INF/,\
-               thirdparty/lpg.jar
+               thirdparty/lpg.jar,\
+               about.html
 src.includes = src/,\
                plugin.xml,\
                build.properties,\
