--- a/plugins/org.eclipse.datatools.sqltools.parsers.sql.query/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.parsers.sql.query/build.properties
@@ -5,7 +5,8 @@ bin.includes = plugin.xml,\
                plugin.properties,\
                bin/,\
                schema/,\
-               META-INF/
+               META-INF/,\
+               about.html
 src.includes = src/,\
                plugin.xml,\
                .classpath,\
