--- a/plugins/org.eclipse.datatools.sqltools.parsers.sql/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.parsers.sql/build.properties
@@ -4,7 +4,8 @@ bin.includes = plugin.xml,\
                sqlparser.jar,\
                thirdparty/lpg.jar,\
                plugin.properties,\
-               META-INF/
+               META-INF/,\
+               about.html
 src.includes = src/,\
                thirdparty/lpg.jar,\
                plugin.xml,\
