[121809] Regenerated code to pick up SQL model plugin changes

--- a/plugins/org.eclipse.datatools.modelbase.sql.edit/plugin.properties
+++ b/plugins/org.eclipse.datatools.modelbase.sql.edit/plugin.properties
@@ -13,7 +13,7 @@
  * <copyright>
  * </copyright>
  *
- * $Id: plugin.properties,v 1.2 2005/06/15 18:16:15 ledunnel Exp $
+ * $Id: plugin.properties,v 1.1 2005/08/02 22:56:24 ledunnel Exp $
  */
 
 # ====================================================================
@@ -409,3 +409,6 @@ _UI_ActionTimeType_BEFORE_literal = BEFORE
 _UI_ActionTimeType_INSTEADOF_literal = INSTEADOF
 _UI_ActionGranularityType_STATEMENT_literal = STATEMENT
 _UI_ActionGranularityType_ROW_literal = ROW
+_UI_CreateChild_text3 = {1}
+_UI_Unknown_datatype= Value
+
