--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile/plugin.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2004,2005 Actuate Corporation.
+# Copyright (c) 2004, 2006 Actuate Corporation.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -8,10 +8,8 @@
 # Contributors:
 #  Actuate Corporation  - initial API and implementation
 ###############################################################################
-
-
-###############################################################################
 # NLS String
 ###############################################################################
+plugin.name=DTP ODA Flat File Run-time Driver
 datasource.name=Flat File Data Source
 dataset.name=Flat File Data Set
