--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile/plugin.xml
@@ -2,7 +2,7 @@
 <?eclipse version="3.0"?>
 <plugin
    id="org.eclipse.datatools.connectivity.oda.flatfile"
-   name="DTP ODA-Flat File Driver"
+   name="%plugin.name"
    version="3.0.0"
    provider-name="Eclipse.org"
    class="org.eclipse.datatools.connectivity.oda.flatfile.plugin.FlatfilePlugin">
