Add new plugin properties for the i18n purpose.

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile/plugin.properties
@@ -13,3 +13,7 @@
 plugin.name=DTP ODA Flat File Run-time Driver
 datasource.name=Flat File Data Source
 dataset.name=Flat File Data Set
+
+datasource.property.home=Home Folder
+datasource.property.charset=Character Set
+datasource.property.incltypeline=Includes Data Type (Yes/No)
