SQL Results View Iteration 1 of M3

--- a/plugins/org.eclipse.datatools.sqltools.result/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.result/plugin.properties
@@ -2,6 +2,7 @@ SQLResultsView.name=SQL Results
 SQLResultsView.full.name=SQL Results View
 SQLResultsView.display.options=SQL Results View Display Options
 SQLResultsView.export.options=SQL Results View Export Format
+SQLResultsView.history.page=Result History Display Options
 RemoveResultAction.command.name=Remove Result
 RemoveAllResultAction.command.name=Remove All Visible Results
 TerminateInstanceAction.command.name=Terminate Result
